--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -18,55 +18,13 @@ task:
   do:
     - { event: 'origin startup' }
     -
+      call: var
+      args:
+        key: command
+        value: --uri https://(({origin}.appsetting.service.www.host.ui)) (({}.args.command))
+    -
       call: exec
       args:
-        cmd: docker exec --user (({}.user.username)) -it (({origin}.appsetting.tag))-www vendor/bin/drush (({}.args.command))
+        cmd: docker exec --user (({}.user.username)) -it (({origin}.appsetting.tag))-www vendor/bin/drush (({}.var.command))
         out: true
     - { event: 'origin windup' }
-#    - { event: 'origin startup' }
-#    -
-#      call: var
-#      args:
-#        key: alter_arg
-#        value: ""
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.args.arg1))
-#            is: decoded
-#        false:
-#          -
-#            call: var
-#            args:
-#              key: alter_arg
-#              value: --raw
-#    - 
-#      check:
-#        data:
-#          -
-#            key: (({}.args.arg1))
-#            is: equal
-#            value: uli
-#        true:
-#          -
-#            call: var
-#            args:
-#              key: alter_arg
-#              value: uli --uri https://(({origin}.appsetting.service.www.host.ui))
-#    -
-#      call: var
-#      args:
-#        key: args
-#        value: (({}.var.alter_arg)) (({}.args._))
-#
-#    #- call: removeDuplicateFromString
-#    #  args:
-#    #    data: (({}.var.args))
-#    #    pipe: args
-#    -
-#      call: exec
-#      args:
-#        cmd: docker exec --user (({}.user.username)) -it (({origin}.appsetting.tag))-www vendor/bin/drush (({}.var.args))
-#        out: true       
-#    - { event: 'origin windup' }
