--- a/config/proc/make.drupal.yml
+++ b/config/proc/make.drupal.yml
@@ -8,7 +8,6 @@ help: Crear nuevo sitio Drupal
 example:
  - (({}.tmp.proc.sig))
 
-
 task:
   require:
     config:
@@ -16,7 +15,6 @@ task:
     args: {}
     opt: {}
     settings:
-      # appsetting.stack: ^drupal-11
       appsetting.stack: ^drupal
   do:
     # Lanza evento de inicio
@@ -143,7 +141,7 @@ task:
       call: exec
       args:
         cd: (({origin}.appsetting.root))
-        cmd: (({}.exec)) dm.drush -y site:install --site-name=(({origin}._name)) --account-name=admin --account-pass=(({}.var.password))
+        cmd: (({}.exec)) dm.drush site:install -y --site-name=(({origin}._name)) --account-name=admin --account-pass=(({}.var.password))
         
     # Configura Drupal
     - check:
