--- a/file/stack/drupal/.dm/templates/docker.compose.service.www.extends.yml
+++ b/file/stack/drupal/.dm/templates/docker.compose.service.www.extends.yml
@@ -4,4 +4,4 @@ www:
     service: www
   build:
     context: .
-    dockerfile: ./custom/dockerfile/Dockerfile.www
+    dockerfile: ./custom/dockerfile.www
