--- a/file/stack/drupal/.dm/templates/dockerfile.mailhog
+++ b/file/stack/drupal/.dm/templates/dockerfile.mailhog
@@ -1,4 +1,7 @@
 ARG APPSETTING_SERVICE_MAILHOG_BASE_IMAGE
 FROM $APPSETTING_SERVICE_MAILHOG_BASE_IMAGE
 
+# user:
+USER root
+
 (({}.var.extra_commands))
