--- a/file/stack/drupal/.dm/templates/dockerfile.pma
+++ b/file/stack/drupal/.dm/templates/dockerfile.pma
@@ -1,6 +1,9 @@
 ARG APPSETTING_SERVICE_PMA_BASE_IMAGE
 FROM $APPSETTING_SERVICE_PMA_BASE_IMAGE
 
-ADD ../templates/bashrc /root/.bashrc
+# user:
+USER root
+
+ADD ./templates/bashrc /root/.bashrc
 
 (({}.var.extra_commands))
