--- a/config/@/proxy/proxy.local.yml
+++ b/config/@/proxy/proxy.local.yml
@@ -11,6 +11,7 @@ appsetting:
     proxy:
       host: ((_env)).((appsetting.wildcard_host))
       base_image: traefik:v3.1
+      extra_commands: []
 
 hook:
   call: {}
