--- a/file/stack/drupal/.dm/templates/dockerfile.memcached
+++ b/file/stack/drupal/.dm/templates/dockerfile.memcached
@@ -1,9 +1,12 @@
 ARG APPSETTING_SERVICE_MEMCACHED_BASE_IMAGE
 FROM $APPSETTING_SERVICE_MEMCACHED_BASE_IMAGE
 
+# user:
+USER root
+ADD ./templates/bashrc /root/.bashrc
+
 # packages:
 RUN apt-get update
-RUN apt-get install netcat-openbsd
+RUN apt-get install -y netcat-openbsd
 
-# user:
-ADD ../templates/bashrc /root/.bashrc
+(({}.var.extra_commands))
