--- a/config/proc/db.export.yml
+++ b/config/proc/db.export.yml
@@ -20,7 +20,7 @@ task:
     -
       call: dm.makeDbExport
       args:
-        from_service: (({origin}._tag))-db
+        from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
         name: (({origin}.appsetting.service.db.name))
