Changes from access and bashrc

--- a/config/proc/access.yml
+++ b/config/proc/access.yml
@@ -18,7 +18,7 @@ task:
       call: exec
       args:
         user: (({origin}.hook.call[dm.access].exec.user))
-        pass: (({origin}.hook.call[dm.access].exec.pass))
+        #pass: (({origin}.hook.call[dm.access].exec.pass))
         default_options: "-t"
         cmd: /bin/bash
         out: true
