--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
@@ -5,11 +5,14 @@ www:
     context: .
     dockerfile: ./templates/dockerfile/www
     args:
-      APPSETTING_USER: ${APPSETTING_USER}
-      APPSETTING_UID: ${APPSETTING_UID}
-      APPSETTING_GID: ${APPSETTING_GID}
-      APPSETTING_ENV: ${APPSETTING_ENV}
       APPSETTING_SERVICE_WWW_BASE_IMAGE: ${APPSETTING_SERVICE_WWW_BASE_IMAGE}
+      APPSETTING_GID: ${APPSETTING_GID}
+      APPSETTING_UID: ${APPSETTING_UID}
+      APPSETTING_USER: ${APPSETTING_USER}
+      APPSETTING_SERVICE_WWW_WEBSERVER: ${APPSETTING_SERVICE_WWW_WEBSERVER}
+      APPSETTING_SERVICE_WWW_PHP_RELEASE: ${APPSETTING_SERVICE_WWW_PHP_RELEASE}
+      APPSETTING_SERVICE_WWW_COMPOSER_RELEASE: ${APPSETTING_SERVICE_WWW_COMPOSER_RELEASE}
+  environment: (({}.var.service_www_env))
   working_dir: ${APPSETTING_SERVICE_WWW_TARGET}
   volumes:
     - 
