Changes from stack

--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
@@ -12,7 +12,7 @@ www:
       APPSETTING_SERVICE_WWW_PHP_RELEASE: ${APPSETTING_SERVICE_WWW_PHP_RELEASE}
       APPSETTING_SERVICE_WWW_COMPOSER_RELEASE: ${APPSETTING_SERVICE_WWW_COMPOSER_RELEASE}
       APPSETTING_SERVICE_WWW_WEBSERVER: ${APPSETTING_SERVICE_WWW_WEBSERVER}
-  environment: (({}.var.service_www_env))
+  environment: (({}.var.env_docker_compose))
   working_dir: ${APPSETTING_SERVICE_WWW_TARGET}
   volumes:
     - 
