--- a/file/stack/drupal/.dm/templates/docker-compose/service.mailhog.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.mailhog.yml
@@ -6,13 +6,4 @@ mailhog:
     args:
       APPSETTING_SERVICE_MAILHOG_BASE_IMAGE: ${APPSETTING_SERVICE_MAILHOG_BASE_IMAGE}
   restart: unless-stopped
-  labels:
-    - "traefik.enable=true"
-    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_mailhog.tls=true"
-    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_mailhog.rule=Host(`${APPSETTING_SERVICE_MAILHOG_HOST_UI}`)"
-    # SMTP Server
-    - "traefik.http.services.${COMPOSE_PROJECT_NAME}_mailhog.loadbalancer.server.port=1025"
-    # Web UI
-    - "traefik.http.services.${COMPOSE_PROJECT_NAME}_mailhog.loadbalancer.server.port=8025"
-  networks:
-    - dm_proxy
+  ports: [ "1025:8025" ]
