--- a/file/stack/drupal/.dm/templates/docker-compose/service.pma.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.pma.dm.yml
@@ -13,6 +13,11 @@ pma:
     PMA_USER: ${APPSETTING_SERVICE_DB_USER}
     PMA_PASSWORD: ${APPSETTING_SERVICE_DB_PASS}
   restart: unless-stopped
+  labels:
+    - "traefik.enable=true"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.rule=Host(`${APPSETTING_SERVICE_PMA_HOST_UI}`)"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_pma.tls=true"
+  networks:
+    - dm_proxy
   depends_on:
     - db
-  ports: [ "8080:80" ]
