--- a/file/stack/drupal/.dm/templates/docker-compose/service.redis.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.redis.dm.yml
@@ -6,4 +6,7 @@ redis:
     args:
       APPSETTING_SERVICE_REDIS_BASE_IMAGE: ${APPSETTING_SERVICE_REDIS_BASE_IMAGE}
   restart: unless-stopped
-  ports: [ "6379:6379" ]
+  labels:
+    - "traefik.http.services.${COMPOSE_PROJECT_NAME}_db.loadbalancer.server.port=6379"
+  networks:
+    - dm_proxy
