--- a/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
@@ -39,4 +39,14 @@
     SetHandler "proxy:unix:/run/php/php((appsetting.service.www.php.release))-fpm.sock|fcgi://localhost"
   </FilesMatch>
 
+  <FilesMatch "\.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$">
+    #Header set Cache-Control "max-age=31536000, public"
+		Header set Cache-Control "max-age=86400, public"
+	</FilesMatch>
+
+  <FilesMatch "\.(js|css)$">
+    #Header set Cache-Control "max-age=31536000, public"
+    Header set Cache-Control "max-age=86400, public"
+	</FilesMatch>
+
 </VirtualHost>
