--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
@@ -31,4 +31,12 @@ www:
     start_period: 2m0s
     timeout: 2m0s
   restart: unless-stopped
-  ports: [ "80:80", "443:443" ]
+  labels:
+    - "traefik.enable=true"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.tls=true"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.rule=Host(`${APPSETTING_SERVICE_WWW_HOST_UI}`)"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.entrypoints=websecure"
+    - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=443"
+    - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=80"
+  networks:
+    - dm_proxy
