--- a/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
@@ -107,6 +107,7 @@ server {
         try_files $uri @rewrite;
         log_not_found off;
         # add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 1d = 86400)
+        add_header Cache-Control 'public, max-age=86400, immutable'; 
     }
 
     # JS/CSS
@@ -114,17 +115,18 @@ server {
         try_files $uri @rewrite;
         log_not_found off;
         # add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 1d = 86400)
+        add_header Cache-Control 'public, max-age=86400, immutable'; 
     }
 
-    # GZIP
-    # gzip on;
-    # gzip_disable "msie6";
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types application/javascript application/rss+xml application/vnd.ms-fontobject application/x-font application/x-font-opentype application/x-font-otf application/x-font-truetype application/x-font-ttf application/x-javascript application/xhtml+xml application/xml font/opentype font/otf font/ttf image/svg+xml image/x-icon text/css text/javascript text/plain text/xml;
+    # GZIP (Text compression)
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types application/javascript application/rss+xml application/vnd.ms-fontobject application/x-font application/x-font-opentype application/x-font-otf application/x-font-truetype application/x-font-ttf application/x-javascript application/xhtml+xml application/xml font/opentype font/otf font/ttf image/svg+xml image/x-icon text/css text/javascript text/plain text/xml;
 
     # Fighting with Styles? This little gem is amazing.
     # location ~ ^/sites/.*/files/imagecache/ { # For Drupal <= 6
