Changes from Cache-Control nginx

--- a/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
@@ -106,16 +106,16 @@ server {
     location ~* \.(jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$ {
         try_files $uri @rewrite;
         log_not_found off;
-        # add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 1d = 86400)
-        add_header Cache-Control 'public, max-age=86400, immutable'; 
+        expires 365d;
+        add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
     }
 
     # JS/CSS
     location ~* \.(js|css)$ {
         try_files $uri @rewrite;
         log_not_found off;
-        # add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 1d = 86400)
-        add_header Cache-Control 'public, max-age=86400, immutable'; 
+        expires 365d;
+        add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
     }
 
     # GZIP (Text compression)
