Add webp nginx default and enable exec remote drush

--- a/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
@@ -103,7 +103,7 @@ server {
     }
 
     # Media
-    location ~* \.(jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$ {
+    location ~* \.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$ {
         try_files $uri @rewrite;
         log_not_found off;
         expires 365d;
