--- a/config/proc/drush.yml
+++ b/config/proc/drush.yml
@@ -9,7 +9,7 @@ task:
   complete: [ cr, uli ]
   require:
     config:
-      - .*(\.local) origin
+      - .*(\.local|\.dev|\.test|\.pre) origin
     args:
       command:
         required: false
@@ -25,6 +25,6 @@ task:
     -
       call: exec
       args:
-        cmd: docker exec --user (({}.user.username)) -it (({origin}.appsetting.tag))-www vendor/bin/drush (({}.var.command))
+        cmd: (({}.exec)) (({origin}._config_name)) exec (({origin}.appsetting.service.www.target))/vendor/bin/drush (({}.var.command))
         out: true
     - { event: 'origin windup' }
