--- a/config/proc/db.sync.yml
+++ b/config/proc/db.sync.yml
@@ -19,7 +19,7 @@ task:
     -
       call: dm.makeDbExport
       args:
-        from_service: (({origin}._tag))-db
+        from_service: (({origin}._parent_key))-db
         base_image: (({origin}.appsetting.service.db.base_image))
         host: (({origin}.appsetting.service.db.host.sv))
         name: (({origin}.appsetting.service.db.name))
@@ -30,7 +30,7 @@ task:
     -
       call: dm.makeDbImport
       args:
-        from_service: (({target}._tag))-db
+        from_service: (({target}._parent_key))-db
         base_image: (({target}.appsetting.service.db.base_image))
         host: (({target}.appsetting.service.db.host.sv))
         name: (({target}.appsetting.service.db.name))
