--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.yml
@@ -12,7 +12,8 @@ www:
       APPSETTING_SERVICE_WWW_PHP_RELEASE: ${APPSETTING_SERVICE_WWW_PHP_RELEASE}
       APPSETTING_SERVICE_WWW_COMPOSER_RELEASE: ${APPSETTING_SERVICE_WWW_COMPOSER_RELEASE}
       APPSETTING_SERVICE_WWW_WEBSERVER: ${APPSETTING_SERVICE_WWW_WEBSERVER}
-  environment: (({}.var.env_docker_compose))
+  #environment: (({}.var.env_docker_compose))
+  env_file: .env
   working_dir: ${APPSETTING_SERVICE_WWW_TARGET}
   volumes:
     - 
@@ -20,11 +21,11 @@ www:
       source: ${APPSETTING_SERVICE_WWW_SOURCE}
       target: ${APPSETTING_SERVICE_WWW_TARGET}
       type: bind
-    # - 
-    #   consistency: cached
-    #   source: ../custom
-    #   target: /root/custom
-    #   type: bind
+    - 
+      consistency: cached
+      source: ./templates/sh
+      target: /home/${APPSETTING_USER}/sh
+      type: bind
   healthcheck:
     interval: 1s
     retries: 120
