--- a/file/stack/drupal/.dm/Makefile
+++ b/file/stack/drupal/.dm/Makefile
@@ -5,4 +5,6 @@ down:
 logs:
 	docker compose --env-file .env logs -f -t
 ps:
-	docker ps --filter name=^/(({}.env._this._tag))
+	docker ps -a --filter name=^/(({}.env._this._tag))
+bash:
+	docker exec -it (({}.env._this._tag))-www /bin/bash
