--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
@@ -39,5 +39,7 @@ www:
     - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.entrypoints=websecure"
     - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=443"
     - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=80"
+  extra_hosts:
+    - "host.docker.internal:host-gateway"
   networks:
     - dm_proxy
