Changes from xdebug, makeDbImport

--- a/config/proc/db.import.yml
+++ b/config/proc/db.import.yml
@@ -15,7 +15,7 @@ task:
       file:
         type: String
         default: 
-      truncate:
+      drop:
         type: Boolean
         default: false
   do:
