Changes from sh

--- a/config/proc/trace.cron_jobs.yml
+++ b/config/proc/trace.cron_jobs.yml
@@ -1,4 +1,4 @@
-help: Muestra mensajes de depuración de Nginx
+help: Muestra mensajes de trabajos de cron
 example:
 - (({}.tmp.proc.sig))
 
@@ -11,7 +11,7 @@ task:
     -
       call: exec
       args:
-        cmd: (({}.exec)) (({origin}._config_name)) exec tail -f /var/log/cron_jobs.log
+        cmd: (({}.exec)) (({origin}._config_name)) exec tail -F /opt/log/cron_jobs.log
         out: true
     - { event: 'origin windup' }
     
