--- a/config/proc/up.yml
+++ b/config/proc/up.yml
@@ -39,6 +39,11 @@ task:
   require:
     config:
       - .*(\.local) origin
+    args: {}
+    opt:
+      keep:
+        type: Boolean
+        default: false
   do:
     - { event: 'origin startup' }
     - 
