--- a/config/proc/make.drupal.install.yml
+++ b/config/proc/make.drupal.install.yml
@@ -1,10 +1,4 @@
-# RECIPE:Instalar Drupal:
-# ```console
-# way @dm.test.drupal.local make.drupal -fyv
-# ```
-# :RECIPE
-
-help: Crear nuevo sitio Drupal
+help: Instala sitio Drupal (básico)
 example:
  - (({}.tmp.proc.sig))
 
@@ -20,51 +14,11 @@ task:
     # Lanza evento de inicio
     - event: 'origin startup'
 
-    # Establece variable que permite desplegar todo el "stack"
-    - call: var
-      args:
-        key: deploy_all_stack
-        value: true
-
     # Pregunta de control
     - call: ask
       args:
         message: "¿Deseas instalar Drupal? (Sobreescribe datos)"
         exitIfNegative: true
-
-    # Inicializa código
-    - check:
-        data: 
-          -
-            key: (({}.opt.f))
-            is: true
-        true:
-          - call: exec
-            args:
-              cmd: (({}.exec)) (({origin}._config_name)) dm.down 2>/dev/null
-              out: false
-          - call: exec
-            args:
-              cmd: docker volume rm "(({origin}.appsetting.tag))-db_data" 2>/dev/null
-              out: false
-          - label: Estableciendo propietario y permisos para "private"
-            call: exec
-            args:
-              cd: (({origin}.appsetting.root))
-              cmd: sudo chmod 777 -R (({origin}.appsetting.service.www.drupal.target))
-          - label: Desplegando configuración
-            call: dm.init
-            args:
-              remove_all: true
-              name: "(({origin}.appsetting.stack))"
-              include: []
-        false:
-          - label: Desplegando configuración
-            call: dm.init
-            args:
-              remove_all: false
-              name: "(({origin}.appsetting.stack))"
-              include: []
 
     # Establece directorios de destino drupal
     - loop:
@@ -74,13 +28,6 @@ task:
           call: exec
           args:
             cmd: mkdir -p (())
-
-    # Reinicia servicios
-    - label: Levantando servicios
-      call: exec
-      args:
-        cd: (({origin}.appsetting.root))
-        cmd: (({}.exec)) dm.restart
 
     # Crea proyecto Drupal mediante Composer
     - label: Creando proyecto Drupal
@@ -95,7 +42,7 @@ task:
       args:
         cd: (({origin}.appsetting.root))
         cmd: cp -r (({origin}.appsetting.service.www.drupal.target))/recommended-project/. (({origin}.appsetting.service.www.drupal.target))/ && rm -r (({origin}.appsetting.service.www.drupal.target))/recommended-project
-    
+      
     # Establece dependencias
     - check:
         data: 
@@ -207,14 +154,6 @@ task:
       args:
         cd: (({origin}.appsetting.root))
         cmd: sudo chmod 777 (({origin}.appsetting.service.www.drupal.target))/private
-
-    # Establece proyecto Git
-    - label: Estableciendo proyecto Git
-      call: exec
-      args:
-        cd: (({origin}.appsetting.root))
-        cmd: git init 2>/dev/null && git checkout -b develop && git add . && git config user.name 'dummy' && git config user.email 'dummy@dummy.org' && git commit -m "Initial commit" && git config --unset user.name && git config --unset user.email
-        out: false
 
     # Obtiene acceso a sitio web
     - label: Obteniendo acceso a sitio web
