--- a/config/proc/poweroff.yml
+++ b/config/proc/poweroff.yml
@@ -11,5 +11,5 @@ task:
         default: false
   do:
     - { event: 'origin startup' }
-    - call: dm.purgeAll
+    - call: dm.powerOff
     - { event: 'origin windup' }
