--- a/config/proc/restart.yml
+++ b/config/proc/restart.yml
@@ -8,7 +8,7 @@ task:
       - .*(\.local) origin
   do:
     - { event: 'origin startup' }
-    - { call: exec, args: { cmd: "(({}.exec)) (({origin}._config_name)) dm.down", out: true }}
-    - { call: exec, args: { cmd: "(({}.exec)) (({origin}._config_name)) dm.up", out: true }}
+    - { call: exec, args: { cmd: "(({}.exec)) (({origin}._config_name)) dm.down (({}.optSig))", out: true }}
+    - { call: exec, args: { cmd: "(({}.exec)) (({origin}._config_name)) dm.up (({}.optSig))", out: true }}
     - { event: 'origin windup' }    
             
