--- a/config/proc/curl.yml
+++ b/config/proc/curl.yml
@@ -5,7 +5,7 @@ example:
 task:
   require:
     config:
-      - .*(\.local|\.dev|\.test|\.pre|\.prod) origin
+      - .*(\.local|\.dev|\.test|\.pre|\.stage|\.prod) origin
     args:
       rel_url:
         required: false
