--- a/config/proc/db.export.yml
+++ b/config/proc/db.export.yml
@@ -12,7 +12,7 @@ task:
       tag:
         type: String
         default:
-      lock-tables:
+      lock:
         type: Boolean
         default: false
   do: 
