Changes from swaks

--- a/file/stack/drupal.headless/private/sh/.env.example
+++ b/file/stack/drupal.headless/private/sh/.env.example
@@ -1,4 +1,5 @@
 # APPSETTING_ENV=pre
-# APPSETTING_COMPILE_MAPPING=sass:css
+# APPSETTING_COMPILE_MAPPING=relpath/sass:relpath/css
 # APPSETTING_NOTIFY_ENABLE=true
-# APPSETTING_NOTIFY_EMAIL="your.email@example.com"
+# APPSETTING_NOTIFY_EMAIL_TO="your.email@example.com" # Puedes añadir N emails separados por comas. Ejemplo: miemail@domino.es,mi2email@domino.es
+# APPSETTING_NOTIFY_EMAIL_FROM="no-reply@example.com"
