--- a/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
+++ b/file/stack/drupal/.dm/templates/docker-compose/service.www.dm.yml
@@ -44,6 +44,8 @@ www:
     - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.entrypoints=websecure"
     - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=443"
     - "traefik.http.services.${COMPOSE_PROJECT_NAME}_www.loadbalancer.server.port=80"
+    - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+    - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_www.middlewares=redirect-to-https"
   extra_hosts:
     - "host.docker.internal:host-gateway"
   networks:
