--- a/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
@@ -29,6 +29,9 @@
 
   DirectoryIndex index.php index.html index.htm;
 
+  # MUY IMPORTANTE para Drupal si está detrás de un proxy SSL como Traefik
+  SetEnvIf X-Forwarded-Proto https HTTPS=on
+
   <Directory "/var/www/html((appsetting.service.www.webserver_docroot))" >
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
@@ -39,30 +42,30 @@
     SetHandler "proxy:unix:/run/php/php((appsetting.service.www.php.release))-fpm.sock|fcgi://localhost"
   </FilesMatch>
 
-  <IfModule mod_headers.c>
-    <FilesMatch "\.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$">
-      # => 1 año
-      Header set Cache-Control "max-age=31536000, public"
-      # => 1 día
-      # Header set Cache-Control "max-age=86400, public"    
-    </FilesMatch>
-    <FilesMatch "\.(js|css)$">
-      # => 1 año
-      Header set Cache-Control "max-age=31536000, public"
-      # => 1 día
-      # Header set Cache-Control "max-age=86400, public"      
-    </FilesMatch>
-  </IfModule>
-  
-  <IfModule mod_expires.c>
-    <FilesMatch "\.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$">
-      ExpiresActive On
-      ExpiresDefault "access plus 1 year"
-    </FilesMatch>
-    <FilesMatch "\.(js|css)$">
-      ExpiresActive On
-      ExpiresDefault "access plus 1 year"      
-    </FilesMatch>
-  </IfModule>
+  # <IfModule mod_headers.c>
+  #   <FilesMatch "\.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$">
+  #     # => 1 año
+  #     Header set Cache-Control "max-age=31536000, public"
+  #     # => 1 día
+  #     # Header set Cache-Control "max-age=86400, public"    
+  #   </FilesMatch>
+  #   <FilesMatch "\.(js|css)$">
+  #     # => 1 año
+  #     Header set Cache-Control "max-age=31536000, public"
+  #     # => 1 día
+  #     # Header set Cache-Control "max-age=86400, public"      
+  #   </FilesMatch>
+  # </IfModule>
+  # 
+  # <IfModule mod_expires.c>
+  #   <FilesMatch "\.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$">
+  #     ExpiresActive On
+  #     ExpiresDefault "access plus 1 year"
+  #   </FilesMatch>
+  #   <FilesMatch "\.(js|css)$">
+  #     ExpiresActive On
+  #     ExpiresDefault "access plus 1 year"      
+  #   </FilesMatch>
+  # </IfModule>
 
 </VirtualHost>
