--- a/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.nginx.default.conf
@@ -93,6 +93,10 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param QUERY_STRING $query_string;
         fastcgi_intercept_errors on;
+
+        # Equivalente a SetEnvIf X-Forwarded-Proto https HTTPS=on
+        fastcgi_param HTTPS 'on';
+
         fastcgi_connect_timeout         300;
         fastcgi_send_timeout           3600;
         fastcgi_read_timeout           3600;
@@ -102,21 +106,21 @@ server {
         fastcgi_temp_file_write_size 256k;
     }
 
-    # Media
-    location ~* \.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$ {
-        try_files $uri @rewrite;
-        log_not_found off;
-        expires 365d;
-        add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
-    }
-
-    # JS/CSS
-    location ~* \.(js|css)$ {
-        try_files $uri @rewrite;
-        log_not_found off;
-        expires 365d;
-        add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
-    }
+    # # Media
+    # location ~* \.(webp|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff)$ {
+    #     try_files $uri @rewrite;
+    #     log_not_found off;
+    #     expires 365d;
+    #     add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
+    # }
+    # 
+    # # JS/CSS
+    # location ~* \.(js|css)$ {
+    #     try_files $uri @rewrite;
+    #     log_not_found off;
+    #     expires 365d;
+    #     add_header Cache-Control 'public, max-age=31536000, immutable'; # Ejemplo caché 1 día (60s x 60m x 24h x 365d = 31536000)
+    # }
 
     # GZIP (Text compression)
     gzip on;
