--- a/config/interface.yml
+++ b/config/interface.yml
@@ -56,6 +56,33 @@ dm:
         required: true
         type: String
         defaultValue:
+  makeDbClean:
+    collection: false
+    args:
+      from_service:
+        required: true
+        type: String
+        defaultValue:
+      base_image:
+        required: true
+        type: String
+        defaultValue:
+      host:
+        required: true
+        type: String
+        defaultValue:
+      name:
+        required: true
+        type: String
+        defaultValue:
+      user:
+        required: true
+        type: String
+        defaultValue:
+      pass:
+        required: true
+        type: String
+        defaultValue:
   makeDbExport:
     collection: false
     args:
