--- a/config/proc/db.ls.conf.yml
+++ b/config/proc/db.ls.conf.yml
@@ -5,7 +5,7 @@ example:
 task:
   require:
     config:
-      - .*(\.local|\.dev|\.test|\.pre) origin
+      - .*(\.local|\.dev|\.test|\.pre|\.stage) origin
   do:
     - { event: 'origin startup' }
     -
