--- a/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
+++ b/file/stack/drupal/.dm/templates/webserver.apache2.default.conf
@@ -9,7 +9,7 @@
   #ServerName www.example.com
 
   ServerAdmin webmaster@localhost
-  DocumentRoot /var/www/html((appsetting.service.www.webserver_docroot))
+  DocumentRoot ((appsetting.service.www.target))((appsetting.service.www.webserver_docroot))
 
   # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
   # error, crit, alert, emerg.
@@ -32,7 +32,7 @@
   # MUY IMPORTANTE para Drupal si está detrás de un proxy SSL como Traefik
   SetEnvIf X-Forwarded-Proto https HTTPS=on
 
-  <Directory "/var/www/html((appsetting.service.www.webserver_docroot))" >
+  <Directory "((appsetting.service.www.target))((appsetting.service.www.webserver_docroot))" >
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
